# TP-VPC3

./: Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: test.csv  train.csv  val.csv
documentation/: memorianueva.aux  memorianueva.blg  memorianueva.fdb_latexmk  memorianueva.fls  memorianueva.lof  memorianueva.lot  memorianueva.out  memorianueva.tex  memorianueva.toc  portada.tex
documentation/Appendices/: AppendixA.aux  AppendixA.tex
documentation/Chapters/: Chapter1.aux  Chapter1.tex  Chapter2.aux  Chapter2.tex  Chapter3.aux  Chapter3.tex
product_tagger/: __init__.py  config.py  data_loader.py  dataset.py  eda.py  features.py  pipeline.py  plots.py  prepare_images.py  split_dataset.py
product_tagger/modeling/: predict.py  train.py
