[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "product_tagger"
version = "0.0.1"
description = "A Vision Transformer\u2013based system for automatic product attribute tagging to improve eCommerce catalog quality and reduce manual labeling effort."
authors = [
  { name = "Abril Noguera - Lautaro Gabriel Medina - Pedro Lucas Barrera" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["product_tagger"]
include = ["pyproject.toml", "product_tagger/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["product_tagger"]
force-sort-within-sections = true

